tests/expectations/compiler/tuple/function_unit_input_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372056]: Unit expressions can only be used in return statements.
    --> compiler-test:10:13
     |
  10 |         foo(());
     |             ^^
"""]
